Header buttons z-index fix

--- a/themes/opensolar-theme/src/scss/components/_header.scss
+++ b/themes/opensolar-theme/src/scss/components/_header.scss
@@ -147,6 +147,10 @@
         top: calc(50% - 25px);
     }
 
+    &__buttons{
+        position: relative;
+    }
+
 }
 
 @media screen and (min-width: $desktopWidthMin) {
